# crgeo

./: .dockerignore  .gitignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile  LICENSE.txt  README.md  environment.yml  environment_cpu.yml  pyproject.toml  setup.cfg
commonroad_geometric/common/: config.py  logging.py  math.py  online_normalization.py  online_stats.py  progress_reporter.py  type_checking.py  types.py
commonroad_geometric/common/caching/: cached_property.py  cached_rng.py
commonroad_geometric/common/class_extensions/: auto_hash_mixin.py  auto_repr_mixin.py  class_property_decorator.py  nested_to_dict.py  safe_pickling_mixin.py  string_resolver_mixing.py
commonroad_geometric/common/geometry/: __init__.py  continuous_polyline.py  helpers.py
commonroad_geometric/common/io_extensions/: eq.py  fast_scenario_loading.py  hash.py  lanelet_network.py  mock_objects.py  obstacle.py  planning_problem.py  planning_problem_set.py  scenario.py  scenario_file_format.py  scenario_files.py
commonroad_geometric/common/random/: ornstein_uhlenbeck_process.py
commonroad_geometric/common/threading/: delayed_executor.py
commonroad_geometric/common/torch_utils/: geometry.py  helpers.py  misc_transforms.py  modules.py  pygeo.py  sampling.py
commonroad_geometric/common/utils/: datetime.py  filesystem.py  functions.py  seeding.py  sleep.py  stack.py  string.py  system.py
commonroad_geometric/dataset/: commonroad_data.py  commonroad_data_temporal.py  commonroad_dataset.py
commonroad_geometric/dataset/collection/: base_dataset_collector.py  dataset_collector.py  road_network_dataset_collector.py  scenario_dataset_collector.py  sumo_dataset_collector.py  temporal_dataset_collector.py
commonroad_geometric/dataset/extraction/: __init__.py  base_extractor.py  base_extractor_factory.py
commonroad_geometric/dataset/generation/: scenario_traffic_generation.py
commonroad_geometric/dataset/iteration/: __init__.py  data_iterator.py  scenario_iterator.py  timestep_iterator.py
commonroad_geometric/dataset/postprocessing/: base_data_postprocessor.py
commonroad_geometric/dataset/preprocessing/: base_scenario_filterer.py  base_scenario_preprocessor.py
commonroad_geometric/dataset/scraping/: __init__.py  open_street_map_crawler.py  rate_limiter.py
commonroad_geometric/dataset/transformation/: base_transformation.py  dataset_transformation.py
commonroad_geometric/debugging/: activate_print_with_traceback.py  activate_warn_with_traceback.py  errors.py  profiling.py  warnings.py
commonroad_geometric/learning/: base_project.py
commonroad_geometric/learning/geometric/: __init__.py  base_geometric.py  types.py
commonroad_geometric/learning/reinforcement/: __init__.py  _episode_resetter.py  base_geometric_feature_extractor.py  commonroad_gym_env.py  constants.py  experiment.py
commonroad_geometric/learning/training/: experiment.py
commonroad_geometric/plotting/: plot_road_network_graph.py  plot_scenario.py  set_research_style.py
commonroad_geometric/rendering/: __init__.py  base_renderer_plugin.py  color_utils.py  defaults.py  scenario_graph_renderer.py  traffic_scene_renderer.py  types.py  video_recording.py
commonroad_geometric/rendering/color/: color.py  color_gradient.py  theme.py
commonroad_geometric/rendering/plugins/: __init__.py  base_renderer_plugin.py  defaults.py  helpers.py  render_drivable_area_plugin.py  render_ego_vehicle_closeup.py  render_ego_vehicle_input_plugin.py  render_ego_vehicle_plugin.py  render_lanelet_curvature_plugin.py  render_lanelet_graph_plugin.py  render_lanelet_network_plugin.py  render_obstacle_labels_plugin.py  render_obstacles_ego_frame_plugin.py  render_obstacles_plugin.py  render_obstacles_temporal_plugin.py  render_planning_problem_set_plugin.py  render_traffic_graph_plugin.py  render_v2l_edges_plugin.py
commonroad_geometric/rendering/viewer/: base_viewer.py  utils.py  viewer_2d.py
commonroad_geometric/simulation/: base_simulation.py  exceptions.py  lanelet_network_info.py  simulation_factory.py
commonroad_geometric/simulation/ego_simulation/: ego_vehicle.py  (+2 more)
commonroad_geometric/tests/: conftest.py
commonroad_geometric/tools/: convert_scenario_format.py  download_osm_data.py  generate_scenario_with_traffic.py  tune_lateral_pid.py
crgeo/common/: math.py  online_stats.py  progress_reporter.py
crgeo/dataset/: commonroad_data.py  commonroad_data_temporal.py  commonroad_dataset.py  types.py
crgeo/learning/: experiment.py
crgeo/rendering/: __init__.py  base_renderer_plugin.py  defaults.py  scenario_graph_renderer.py  traffic_scene_renderer.py  types.py  video_recording.py
crgeo/simulation/: base_simulation.py  exceptions.py  lanelet_network_info.py
docs/: Makefile  README.txt  conf.py  gallery.rst  index.rst  requirements.txt
docs/api/: dataset.rst  index.rst  rendering.rst  simulation.rst
docs/user/: contributing.rst  getting_started.rst  index.rst  troubleshooting.rst
img/: crgeo_high_level_architecture.draw.io.xml
scripts/: create-crgeo-cpu-environment.sh  create-dev-environment.sh  download-directory-from-nextcloud.sh  gen_flags_for_sumo_commandline_config.py  run_tests.sh  sweep.template.yaml  sweeps_optimization.sh  torch_test.py
scripts/profiling/: numba_speed_test.py  traffic_extractor.py
scripts/toolpaper/: generate_figures.py
tools/: download_osm_data.py  generate_scenario_with_traffic.py  tune_lateral_pid.py
tutorials/: collect_commonroad_temporal_dataset.py  collect_data_custom_feature.py  collect_data_scenario.py  collect_data_sumo.py  collect_road_network_dataset.py  collect_temporal_data_sumo.py  collect_temporal_dataset.py  collect_temporal_traffic_data_sumo.py  collect_traffic_data_simple.py  collect_traffic_data_sumo.py  collect_traffic_data_with_custom_features.py  enjoy_scenario_simulation.py  enjoy_sumo_simulation.py  extract_and_plot_road_network_graph.py  extract_traffic_graph.py  play_ego_vehicle.py  process_scenarios.py  record_trajectories.py  render_road_coverage.py  render_scenario_from_graph.py  render_scenario_movie.py  render_with_custom_plugin.py
(+706 files in other folders)
