[metadata]
name = crgeo
version = 0.0.1
description = Contains functionality for facilitating research on graph neural networks for autonomous driving and provides an interface between CommonRoad and Pytorch Geometric.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CommonRoad/commonroad-geometric

[options]
packages = find:
setup_requires =
    setuptools
install_requires =
    # Check dependencies (https://gitlab.lrz.de/cps/commonroad-geometric/-/issues/13)
    commonroad-drivability-checker==2021.4.1
    commonroad-io==2022.1
    commonroad_route_planner==2022.1
    dill==0.3.4
    matplotlib>=3.3.3
    networkx==2.5.1
    numpy>=1.21.4
    Pillow>=7.1.1
    pandas==1.4.1
    pyglet==1.5.23
    python-statemachine==0.8.0
    psutil==5.9.4
    scikit-learn==0.24.1
    scipy>=1.3.0
    shapely==1.8.0
    tqdm>=4.62.3
    typing_extensions==4.1.1
python_requires = >=3.8

[options.extras_require]
tests =
    mypy
    pytest
# set SUMO_HOME according to https://sumo.dlr.de/docs/Installing/index.html
sumo =
    sumolib==1.12.0
    traci==1.12.0
[options.packages.find]
include = crgeo

[mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
# https://justincaustin.com/blog/mypy-tips-and-tricks
# files = crgeo, tutorials
files = crgeo
exclude = ^crgeo/external
python_version = 3.8
warn_unreachable = True
ignore_missing_imports = True
show_error_codes = True
# strict = True
strict = False
disallow_subclassing_any = False
disallow_untyped_calls = False
no_implicit_reexport = False
explicit_package_bases = True
namespace_packages = True


[tool:pytest]
# https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
testpaths = crgeo/tests
