[metadata]
name = commonroad-geometric
version = 2023.1
description = Contains basic functionality for facilitating research on graph neural networks for autonomous driving and provides an interface between CommonRoad and Pytorch Geometric.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.lrz.de/cps/commonroad-geometric

[options]
packages = find:
python_requires = == 3.10.*
setup_requires =
    setuptools
install_requires =
    # Check dependencies (https://gitlab.lrz.de/cps/commonroad-geometric/-/issues/13)
    aiohttp>=3.8.1
    bayesian-optimization==1.3.1
    class-resolver==0.3.9
    commonroad-io==2022.1
    commonroad-drivability-checker==2022.1.1
    dill==0.3.6
    eclipse-sumo==1.16.0
    ffmpeg==1.4
    geopy==2.2.0
    glooey==0.3.6
    gym==0.21
    humanize==4.1.0
    hydra-core==1.2.0
    iso3166==1.0.1
    libsumo==1.16.0
    lxml>=4.3.4 # External
    matplotlib>=3.3.3
    networkx==2.5.1
    numpy==1.24.*
    opendrive2lanelet==1.1.0
    optuna==2.10.0
    ordered-set==4.0.2 # External
    optuna==2.10.0
    Pillow==9.4.*
    pandas==1.4.1
    pyglet==1.5.23
    python-dotenv==0.20.0
    python-statemachine==0.8.0
    rdflib==6.1.1
    scikit-learn==1.2.1
    scipy==1.10.1
    shapely==1.8.0
    stable-baselines3==1.5.0
    tensorboard==2.12.*
    tqdm>=4.62.3
    traci==1.16.0
    typing_extensions==4.1.1
    utm>=0.5.0 # External
    wandb==0.12.*

[options.extras_require]
tests =
    mypy
    pytest
[options.packages.find]
include = commonroad_geometric

[mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
# https://justincaustin.com/blog/mypy-tips-and-tricks
# files = commonroad_geometric, tutorials
files = commonroad_geometric
exclude = ^commonroad_geometric/external
python_version = 3.10
warn_unreachable = True
ignore_missing_imports = True
show_error_codes = True
# strict = True
strict = False
disallow_subclassing_any = False
disallow_untyped_calls = False
no_implicit_reexport = False
explicit_package_bases = True
namespace_packages = True

[tool:pytest]
# https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
testpaths = commonroad_geometric/tests
