[metadata]
name = crgeo
version = 2024.2
description = Contains basic functionality for facilitating research on graph neural networks for autonomous driving and provides an interface between CommonRoad and Pytorch Geometric.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = == 3.10.*
setup_requires =
    setuptools
install_requires =
    commonroad-drivability-checker==2023.1
    commonroad-io==2024.1
    commonroad-vehicle-models==3.0.2
    dill==0.3.6
    eclipse-sumo==1.19.0
    gymnasium==0.29.1
    humanize==4.9.0
    hydra-core==1.2.0
    libsumo==1.19.0
    imageio==2.34.0
    matplotlib==3.8.3
    moviepy==1.0.3
    networkx==3.2.1
    numpy==1.26.3
    omegaconf==2.3.0
    open3d==0.18.0
    optuna==3.6.1
    pandas==2.2.0
    pyglet==1.5.23
    python-statemachine==0.8.0
    python-dotenv==1.0.1
    scikit-learn==1.4.0
    scipy==1.12.0
    seaborn==0.13.2
    shapely==2.0.3
    stable_baselines3==2.4.0
    sumocr==2024.1
    sumolib==1.19.0
    tensorboard==2.16.2
    tqdm==4.66.2
    traci==1.19.0
    typing_extensions==4.9.0
    wandb==0.18.7

[options.extras_require]
tests =
    mypy
    pytest
[options.packages.find]
include = commonroad_geometric

[mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
# https://justincaustin.com/blog/mypy-tips-and-tricks
# files = commonroad_geometric, tutorials
files = commonroad_geometric
exclude = ^commonroad_geometric/external
python_version = 3.10
warn_unreachable = True
ignore_missing_imports = True
show_error_codes = True
# strict = True
strict = False
disallow_subclassing_any = False
disallow_untyped_calls = False
no_implicit_reexport = False
explicit_package_bases = True
namespace_packages = True

[tool:pytest]
# https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
testpaths = commonroad_geometric/tests
log_cli = True
